--- a/index.html
+++ b/index.html
@@ -2,40 +2,49 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>汤州的个人网站</title>
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+    <title>我的网站</title>
+    <style>
+        * { margin: 0; padding: 0;}
+        a{color: #000000;text-decoration: none;}
+        a:hover{color: #FF0000;}
 
-<table class="table table-striped">
-    <caption>汤州的测试</caption>
-    <thead>
-    <tr>
-        <th>姓名</th>
-        <th>学号</th>
-        <th>专业</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>汤州</td>
-        <td>1790005</td>
-        <td>软件工程</td>
-    </tr>
-    <tr>
-        <td>XXX</td>
-        <td>1790005</td>
-        <td>软件工程</td>
-    </tr>
-    <tr>
-        <td>XXX</td>
-        <td>1790006</td>
-        <td>软件工程</td>
-    </tr>
-    </tbody>
-</table>
+        .mytitle{text-align: center;}
+        #dowebok { width: 90%; margin: 0 auto; font-size: 14px;}
+        #dowebok li { float: left; width: 30%; margin-left: 1%; padding-top: 1%;}
+        #dowebok li img { width: 100%;}
+        #dowebok li .dt { width: 100%;text-align: center;}
+        #dowebok li{list-style-type: none;}
+    </style>
+</head>
+
+<body>
+<h1 class="mytitle">179000501 刘备</h1>
+<ul id="dowebok">
+    <li>
+        <div><a href="#"><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></a></div>
+        <div class="dt"><a href="#">作品1：普通网页布局展示</a></div>
+    </li>
+    <li>
+        <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
+        <div class="dt">作品2：普通网页布局展示</div>
+    </li>
+    <li>
+        <div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
+        <div class="dt">作品1：普通网页布局展示</div>
+    </li>
+    <li>
+        <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
+        <div class="dt">作品2：普通网页布局展示</div>
+    </li>
+    <li>
+        <div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
+        <div class="dt">作品1：普通网页布局展示</div>
+    </li>
+    <li>
+        <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
+        <div class="dt">作品2：普通网页布局展示</div>
+    </li>
+</ul>
 
 </body>
 </html>
