--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>我的网站</title>
+    <title>汤州的个人网站</title>
     <style>
         * { margin: 0; padding: 0;}
         a{color: #000000;text-decoration: none;}
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<h1 class="mytitle">179000501 刘备</h1>
+<h1 class="mytitle">179000548 汤州</h1>
 <ul id="dowebok">
     <li>
         <div><a href="#"><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></a></div>
