--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         .mytitle{text-align: center;}
         #dowebok { width: 90%; margin: 0 auto; font-size: 14px;}
         #dowebok li { float: left; width: 30%; margin-left: 1%; padding-top: 1%;}
-        #dowebok li img { width: 100%;}
+        #dowebok li img { width: 100%; height: 200px}
         #dowebok li .dt { width: 100%;text-align: center;}
         #dowebok li{list-style-type: none;}
     </style>
@@ -21,12 +21,12 @@
 <h1 class="mytitle">179000548 汤州</h1>
 <ul id="dowebok">
     <li>
-        <div><a href="#"><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></a></div>
-        <div class="dt"><a href="#">作品1：普通网页布局展示</a></div>
+        <div><a href="theOne.html"><img src="img/web1.jpg" alt="图片1" width=""></a></div>
+        <div class="dt"><a href="theOne.html">作品1：普通网页布局展示</a></div>
     </li>
     <li>
-        <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-        <div class="dt">作品2：普通网页布局展示</div>
+        <div><a href="theTwo.html"><img src="img/web2.png" alt="图片2"></a></div>
+        <div class="dt"><a href="theTwo.html">作品2：普通网页布局展示</a></div>
     </li>
     <li>
         <div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
