汤州第四次提交

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1 class="mytitle">179000548 汤州</h1>
 <ul id="dowebok">
     <li>
-        <div><a href="theOne.html"><img src="img/web1.jpg" alt="图片1" width=""></a></div>
+        <div><a href="theOne.html"><img src="img/web1.png" alt="图片1" width=""></a></div>
         <div class="dt"><a href="theOne.html">作品1：普通网页布局展示</a></div>
     </li>
     <li>
