汤州第四次提交

--- a/theOne.html
+++ b/theOne.html
@@ -8,7 +8,7 @@
             width: 1003px; margin: auto;
         }
         .version_l{
-            background: #cccccc;
+            background: #ececec;
             text-align: right;
             height: 25px;
             line-height: 25px;
