--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 <ul id="dowebok">
     <li>
         <div><a href="theOne.html"><img src="img/web1.png" alt="图片1" width=""></a></div>
-        <div class="dt"><a href="theOne.html">作品1：普通网页布局展示</a></div>
+        <div class="dt"><a href="theOne.html">作业1</a></div>
     </li>
     <li>
         <div><a href="theTwo.html"><img src="img/web2.png" alt="图片2"></a></div>
-        <div class="dt"><a href="theTwo.html">作品2：普通网页布局展示</a></div>
+        <div class="dt"><a href="theTwo.html">作业2</a></div>
     </li>
     <li>
-        <div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
-        <div class="dt">作品1：普通网页布局展示</div>
+        <div><a href="theThree.html"><img src="img/theThreePic.png" alt="作业3"></a></div>
+        <div class="dt"><a href="theThree.html">作业3</a></div>
     </li>
     <li>
         <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
