--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="dt"><a href="theThree.html">作业3</a></div>
     </li>
     <li>
-        <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-        <div class="dt">作品2：普通网页布局展示</div>
+        <div><a href="js02.html"><img src="img/js02.png" alt="图片2"></a></div>
+        <div class="dt"><a href="js02.html">作品4:js01</a></div>
     </li>
     <li>
         <div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
