--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="dt"><a href="js02.html">作品4:js01</a></div>
     </li>
     <li>
-        <div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
-        <div class="dt">作品1：普通网页布局展示</div>
+        <div><a href="theFour.html"><img src="img/dom.png" alt="DOM编程"></a></div>
+        <div class="dt">作品 5：DOM编程</div>
     </li>
     <li>
         <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
