--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="dt">作品 5：DOM编程</div>
     </li>
     <li>
-        <div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-        <div class="dt">作品2：普通网页布局展示</div>
+        <div><a href="theFive.html"><img src="img/test6.png" alt="练习6 事件"></a></div>
+        <div class="dt">练习6 事件</div>
     </li>
 </ul>
 
