--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <div><a href="theFive.html"><img src="img/test6.png" alt="练习6 事件"></a></div>
         <div class="dt">练习6 事件</div>
     </li>
+    <li>
+        <div><a href="theSix.html"><img src="img/theSix.png" alt="练习7 BOM编程"></a></div>
+        <div class="dt">练习7 BOM编程</div>
+    </li>
 </ul>
 
 </body>
