--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <div><a href="theSix.html"><img src="img/theSix.png" alt="练习7 BOM编程"></a></div>
         <div class="dt">练习7 BOM编程</div>
     </li>
+    <li>
+        <div><a href="theSeven.html"><img src="img/theSeven.png" alt="练习8 BOM编程"></a></div>
+        <div class="dt">练习8 BOM编程</div>
+    </li>
 </ul>
 
 </body>
