练习9 购物车

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <div><a href="theSeven.html"><img src="img/theSeven.png" alt="练习8 BOM编程"></a></div>
         <div class="dt">练习8 BOM编程</div>
     </li>
+    <li>
+        <div><a href="cart_task.html"><img src="img/cart.png" alt="练习9 购物车"></a></div>
+        <div class="dt">练习9 购物车</div>
+    </li>
 </ul>
 
 </body>
