--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         <div><a href="cart_task.html"><img src="img/cart.png" alt="练习9 购物车"></a></div>
         <div class="dt">练习9 购物车</div>
     </li>
+    <li>
+        <div><a href="tab_task.html"><img src="img/car111.png" alt="练习9 购物车"></a></div>
+        <div class="dt">练习10 jquery-动画</div>
+    </li>
+    <li>
+        <div><a href="tab2_tack.html"><img src="img/play.png" alt="练习9 购物车"></a></div>
+        <div class="dt">练习11 jquery-动画</div>
+    </li>
 </ul>
 
 </body>
