--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         <div><a href="tab2_tack.html"><img src="img/play.png" alt="练习9 购物车"></a></div>
         <div class="dt">练习11 jquery-动画</div>
     </li>
+    <li>
+        <div><a href="ajax11.html"><img src="img/ajax11.png" alt="练习11 ajax应用"></a></div>
+        <div class="dt">练习11 ajax应用</div>
+    </li>
 </ul>
 
 </body>
